# caprigrad

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
apps/: capricorngrad_test.cpp  main.cpp
doc/: plan.txt  things_to_experiment.txt
extra/gemm/: gemm.c  gemm.py
py/models/: mnist.py
src/: colors.h  helpers.h  keyboard_events.h
src/dataloaders/: DataLoader.h  DataSource.h  transform_functions.h
src/engine/: Layer.cpp  Layer.h  MLP.cpp  MLP.h  Module.h  Neuron.cpp  Neuron.h
src/ffml/: ffml.cpp  ffml.h
src/models/: karpathygpt.h  llamac.h  makemore.h  makemore_wavenet.h  mnist.h  mnist_load.h  randombinary.h  simple_mlp.h  tinyshakespeare.h
src/optim/: AdaBelief.h  Adam.h  AdamW.h  BasicOptimizer copy.h  LearningRateScheduler.h  Optimizer.h  RMSProp.h  SGD.h  SGDWithMomentum.h
src/sockets/: cgraph_queries.h  routes.h  server.cpp  server.h
src/ui/: app.cpp  app.h
tests/: common.h  main_test.h  test_2d.h  test_all_ops.h  test_broadcasting.h  test_broadcasting2.h  test_broadcasting3.h  test_cnn.py  test_conv2d.h  test_convolution.h  test_embedding.h  test_embedding.py  test_gelu.h  test_gelu.py  test_gelu_approx.h  test_karpathy_1.h  test_karpathy_2.h  test_karpathy_3.h  test_karpathy_4_exp.h  test_matmul.h  test_matmul_higher_dim.h  test_matmul_higher_dim.py  test_repeat.h  test_reshape.h  test_rmsnorm.h  test_rmsnorm.py  test_softmax.h  test_softmax.py  test_softmax_crossentropy.h  test_softmax_crossentropy.py  test_softmax_crossentropy_batched.h  test_softmax_crossentropy_batched.py  test_transpose.h  test_uneven_pooling.h
web/: index.js
(+14 files in other folders)
